# DevEnv_Bazel

./: README.md
src_bazel/: WORKSPACE  build.sh  deploy_gdp.sh  run.sh
src_bazel/main/: BUILD  main.cpp
src_cpp/: CMakeLists.txt
src_cpp/postgres/: anon_func--1.0.0.sql  anon_func.cc  dp_func.cc  dp_func.h  dp_func_test.cc  fruiteaten.csv  install_extension.sh  postgres.BUILD
src_cpp/postgres/docker/: Dockerfile  README.md  postgresql.conf.sample
src_cpp/postgres/docker/docker-entrypoint-initdb.d/: init-permissions.sh
src_cpp/src/: main.cpp
